<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Products</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving Product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating Product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_prodcut_failed">Error with deleting Product</string>
    <string name="delete_dialog_msg">Delete this Product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="category_overview">Overview</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_contact">Contact</string>
    <string name="unknown_contact">Unknown contact</string>
    <string name="price">Price</string>
    <string name="hint_price">Price</string>
    <string name="unit_price">$</string>
    <string name="category_price">Price</string>
    <string name="category_quanity">Quantity</string>
    <string name="hint_product_Quantity">Enter Quantity</string>
    <string name="name">Name</string>
    <string name="in_stock">In Stock: </string>
    <string name="sales">Sold:</string>
    <string name="product_name">Product Name</string>
    <string name="button">Button</string>
    <string name="sale">Sale</string>
    <string name="order">Order</string>
    <string name="edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="seller_info">Seller Info</string>
    <string name="contact">Contact</string>
    <string name="sold">Sold</string>
    <string name="add_image">Add Image</string>
    <string name="image_problem">NO Image</string>
    <string name="imageproblem">Problem Adding Image</string>
</resources>
